--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r ${{ env.ZIP_FILE_NAME }} sdccc/target/zip/
+          args: zip -qq -r -j ${{ env.ZIP_FILE_NAME }} sdccc/target/zip/
 
       - name: Attach artifacts to snapshot
         uses: softprops/action-gh-release@v1
