--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            ${{ env.ZIP_FILE_NAME }}
             CHANGELOG.md
-          prerelease: !startsWith(github.ref, 'refs/tags/v')
+            ${{ env.ZIP_FILE_NAME }}
+          prerelease: ${{ !startsWith(github.ref, 'refs/tags/v') }}
           body_path: CHANGELOG.md
