--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
           echo CHANGELIST= >> $GITHUB_ENV
-      - name: Remove SNAPSHOT suffix for release
-        if: startsWith(github.ref, 'refs/tags/v')
-        run: |
-          echo CHANGELIST= >> $GITHUB_ENV
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -63,14 +59,12 @@ jobs:
 
       - name: Set zip file name for release
         if: startsWith(github.ref, 'refs/tags/')
-        uses: montudor/action-zip@v1
-        with:
-          args: ZIP_FILE_NAME=SDCcc-${{ env.RELEASE_VERSION }}-executable-win64.zip >> $GITHUB_ENV
+        run: |
+          echo ZIP_FILE_NAME=SDCcc-${{ env.RELEASE_VERSION }}-executable-win64.zip >> $GITHUB_ENV
       - name: Set zip file name for snapshot
         if: startsWith(github.ref, 'refs/tags/') && !startsWith(github.ref, 'refs/tags/v')
-        uses: montudor/action-zip@v1
-        with:
-          args: ZIP_FILE_NAME=SDCcc-${{ env.RELEASE_VERSION }}-${{ env.CHANGELIST }}-executable-win64.zip >> $GITHUB_ENV
+        run: |
+          echo ZIP_FILE_NAME=SDCcc-${{ env.RELEASE_VERSION }}-${{ env.CHANGELIST }}-executable-win64.zip >> $GITHUB_ENV
 
       - name: Zip executable
         if: startsWith(github.ref, 'refs/tags/')
