--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,19 +58,15 @@ jobs:
           cp README.md sdccc/target/zip/
 
       - name: Set zip file name for release
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          echo ZIP_FILE_NAME=SDCcc-${{ env.RELEASE_VERSION }}-executable-win64.zip >> $GITHUB_ENV
-      - name: Set zip file name for snapshot
         if: startsWith(github.ref, 'refs/tags/') && !startsWith(github.ref, 'refs/tags/v')
         run: |
-          echo ZIP_FILE_NAME=SDCcc-${{ env.RELEASE_VERSION }}-${{ env.CHANGELIST }}-executable-win64.zip >> $GITHUB_ENV
+          echo ZIP_FILE_NAME=SDCcc-${{ env.RELEASE_VERSION }}${{ env.CHANGELIST }}-executable-win64.zip >> $GITHUB_ENV
 
       - name: Zip executable
         if: startsWith(github.ref, 'refs/tags/')
         uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r -j ${{ env.ZIP_FILE_NAME }} sdccc/target/zip/
+          args: zip -qq -r ${{ env.ZIP_FILE_NAME }} sdccc/target/zip/
 
       - name: Attach artifacts to snapshot
         uses: softprops/action-gh-release@v1
