--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,18 +62,22 @@ jobs:
         run: |
           echo ZIP_FILE_NAME=SDCcc-${{ env.RELEASE_VERSION }}${{ env.CHANGELIST }}-executable-win64.zip >> $GITHUB_ENV
 
-      - name: Zip executable
+      - name: Install zip
         if: startsWith(github.ref, 'refs/tags/')
         uses: montudor/action-zip@v1
-        with:
-          args: zip -qq -r ${{ env.ZIP_FILE_NAME }} sdccc/target/zip/
 
+
+      - name: Zip executable
+        if: startsWith(github.ref, 'refs/tags/')
+        working-directory: sdccc/target/zip
+        run: |
+          zip -qq -r ${{ env.ZIP_FILE_NAME }} .
       - name: Attach artifacts to snapshot
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             CHANGELOG.md
-            ${{ env.ZIP_FILE_NAME }}
+            sdccc/target/zip/${{ env.ZIP_FILE_NAME }}
           prerelease: ${{ !startsWith(github.ref, 'refs/tags/v') }}
           body_path: CHANGELOG.md
