--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,19 +14,29 @@ jobs:
     steps:
       # Run `git checkout`
       - uses: actions/checkout@v3
-      - name: Retrieve current version from pm
+
+      - name: Retrieve current version from pom
         run: |
           echo RELEASE_VERSION=$(cat pom.xml | grep -o -P '(?<=revision\>).*(?=\<\/revision)') >> $GITHUB_ENV
           echo "Release version is $RELEASE_VERSION"
+          echo GIT_HASH_SHORT=$(git rev-parse --short "$GITHUB_SHA") >> $GITHUB_ENV
+
       - name: Remove SNAPSHOT suffix for release
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
+          echo CHANGELIST=${{ env.CHANGELIST }}.${{ env. GIT_HASH_SHORT }} >> $GITHUB_ENV
+
+      - name: Add git hash to snapshot release
+        if: startsWith(github.ref, 'refs/tags/') && !startsWith(github.ref, 'refs/tags/v')
+        run: |
           echo CHANGELIST= >> $GITHUB_ENV
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
+
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
@@ -41,11 +51,13 @@ jobs:
         with:
           path: sdccc/target/jre
           key: jre-cache
+
       - name: Build package and download license information
         run: |
           mvn package license:download-licenses -Dchangelist=${{ env.CHANGELIST }} -DskipTests=true -f pom.xml -Pexecutable
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Collect executable artifacts
         run: |
           mkdir sdccc/target/zip
@@ -66,12 +78,12 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         uses: montudor/action-zip@v1
 
-
       - name: Zip executable
         if: startsWith(github.ref, 'refs/tags/')
         working-directory: sdccc/target/zip
         run: |
           zip -qq -r ${{ env.ZIP_FILE_NAME }} .
+
       - name: Attach artifacts to snapshot
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
