--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,16 +20,17 @@ jobs:
           echo RELEASE_VERSION=$(cat pom.xml | grep -o -P '(?<=revision\>).*(?=\<\/revision)') >> $GITHUB_ENV
           echo "Release version is $RELEASE_VERSION"
           echo GIT_HASH_SHORT=$(git rev-parse --short "$GITHUB_SHA") >> $GITHUB_ENV
+          echo "Git revision is is $GIT_HASH_SHORT"
 
       - name: Remove SNAPSHOT suffix for release
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
-          echo CHANGELIST=${{ env.CHANGELIST }}.${{ env. GIT_HASH_SHORT }} >> $GITHUB_ENV
+          echo CHANGELIST= >> $GITHUB_ENV
 
       - name: Add git hash to snapshot release
         if: startsWith(github.ref, 'refs/tags/') && !startsWith(github.ref, 'refs/tags/v')
         run: |
-          echo CHANGELIST= >> $GITHUB_ENV
+          echo CHANGELIST=${{ env.CHANGELIST }}.${{ env. GIT_HASH_SHORT }} >> $GITHUB_ENV
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
