--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run headless test
         uses: GabrielBB/xvfb-action@v1
         with:
-          run: mvn verify -Dchangelist=${{ env.CHANGELIST }} -f pom.xml -Dmaven.test.skip=true
+          run: mvn verify -Dchangelist=${{ env.CHANGELIST }} -f pom.xml
           working-directory: ./ #optional
           options: #optional
         env:
