--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,8 @@ env:
 jobs:
   test-java-snapshot:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       # Run `git checkout`
       - uses: actions/checkout@v3
