--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
   test-java-snapshot:
     runs-on: ubuntu-latest
     permissions:
-      packages: write
+      contents: write
     steps:
       # Run `git checkout`
       - uses: actions/checkout@v3
