#7 move some versions to parent pom.xml, fix runtime bug in the R0036 test and increment major version in revision

--- a/dpws-model/pom.xml
+++ b/dpws-model/pom.xml
@@ -25,13 +25,13 @@
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>4.0.0</version>
+            <version>${jakartaXmlBindApiVersion}</version>
         </dependency>
 
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>4.0.1</version>
+            <version>${comSunXmlBindVersion}</version>
             <scope>runtime</scope>
         </dependency>
 
