--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Build java package
 
 on:
-  pull_request: # Apply to all pull requests
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
   push: # Apply to all branches
 
 env:
