update to jdk17 (#24)
Update to jdk17

# Checklist

The following aspects have been respected by the author of this pull
request, confirmed by both pull request assignee **and** reviewers:

* Adherence to coding conventions
  * [x] @maximilianpilz 
  * [x] @ben-Draeger 
* Adherence to javadoc conventions
  * [x] @maximilianpilz 
  * [x] @ben-Draeger 
* Changelog update (necessity checked and entry added or not added
respectively)
  * [x] @maximilianpilz 
  * [x] @ben-Draeger 
* README update (necessity checked and entry added or not added
respectively)
  * [x] @maximilianpilz 
  * [x] @ben-Draeger 
* config update (necessity checked and entry added or not added
respectively)
  * [x] @maximilianpilz 
  * [x] @ben-Draeger 
* SDCcc executable ran against a test device (if necessary)
  * [x] @maximilianpilz 
  * [x] @ben-Draeger

--- a/dpws-model/pom.xml
+++ b/dpws-model/pom.xml
@@ -21,70 +21,38 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.jvnet.jaxb2_commons/jaxb2-basics-runtime -->
+
         <dependency>
-            <groupId>org.jvnet.jaxb2_commons</groupId>
-            <artifactId>jaxb2-basics</artifactId>
-            <version>${jaxbBasicsVersion}</version>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakartaXmlBindApiVersion}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
-            <version>2.3.1</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core -->
-        <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-core</artifactId>
-            <version>2.3.0.1</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
-            <version>2.3.2</version>
+            <version>${comSunXmlBindVersion}</version>
+            <scope>runtime</scope>
         </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.jvnet.jaxb2.maven2</groupId>
-                <artifactId>maven-jaxb2-plugin</artifactId>
-                <version>0.14.0</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>3.1.0</version>
                 <executions>
                     <execution>
                         <id>soap-12</id>
                         <phase>generate-sources</phase>
                         <configuration>
-                            <!-- <forceRegenerate>${jaxb-plugin.forceRegenerate}</forceRegenerate> -->
                             <locale>en</locale>
                             <readOnly>true</readOnly>
-                            <episode>true</episode>
-                            <strict>false</strict>
-                            <extension>true</extension>
-                            <generateDirectory>${directories.generatedSources}/java</generateDirectory>
-                            <args>
-                                <arg>-npa</arg>
-                                <arg>-no-header</arg>
-                                <arg>-Xsetters</arg>
-                                <arg>-Xsetters-mode=accessor</arg>
-                                <!--<arg>-Xcopyable</arg>-->
-                                <arg>-XsimpleEquals</arg>
-                                <arg>-XsimpleHashCode</arg>
-                                <arg>-XtoString</arg>
-                            </args>
-                            <plugins>
-                                <plugin>
-                                    <groupId>org.jvnet.jaxb2_commons</groupId>
-                                    <artifactId>jaxb2-basics</artifactId>
-                                    <version>${jaxbBasicsVersion}</version>
-                                </plugin>
-                            </plugins>
                         </configuration>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>xjc</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -93,7 +61,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>add-source</id>
