--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,12 @@
     </modules>
 
     <properties>
-        <revision>5.1.0</revision>
+        <revision>6.0.0</revision>
         <changelist>-SNAPSHOT</changelist>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <execPluginVersion>1.6.0</execPluginVersion>
-        <jaxbBasicsVersion>0.12.0</jaxbBasicsVersion>
+        <execPluginVersion>3.1.0</execPluginVersion>
+        <jakartaXmlBindApiVersion>4.0.0</jakartaXmlBindApiVersion>
+        <comSunXmlBindVersion>4.0.1</comSunXmlBindVersion>
     </properties>
 
     <build>
@@ -28,9 +29,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
-                    <release>11</release>
+                    <release>17</release>
                 </configuration>
             </plugin>
 
