--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -15,21 +15,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junitVersion>5.6.0</junitVersion>
         <junitPlatformVersion>1.6.0</junitPlatformVersion>
-        <sdcriVersion>2.0.0</sdcriVersion>
+        <sdcriVersion>2.1.0-20221018.121941-19</sdcriVersion>
         <log4jVersion>2.17.1</log4jVersion>
-        <spotbugsVersion>4.0.0</spotbugsVersion>
+        <spotbugsVersion>4.7.3</spotbugsVersion>
         <checkstyleConfigDir>../checkstyle</checkstyleConfigDir>
         <bouncyCastleVersion>1.65</bouncyCastleVersion>
 
         <!-- name of the directory inside the archive -->
-        <jreDirectoryName>jdk-11.0.16.1+1-jre</jreDirectoryName>
+        <jreDirectoryName>jdk-17.0.5+8-jre</jreDirectoryName>
         <jreBasePath>./jre</jreBasePath>
         <jreFullPath>${jreBasePath}/${jreDirectoryName}</jreFullPath>
-        <jreDownloadUrlPrefix>https://github.com/adoptium/temurin11-binaries/releases/download/</jreDownloadUrlPrefix>
-        <jreDownloadFileName>OpenJDK11U-jre_x64_windows_hotspot_11.0.16.1_1.zip</jreDownloadFileName>
-        <jreDownloadUrlSuffix>jdk-11.0.16.1+1/${jreDownloadFileName}</jreDownloadUrlSuffix>
+        <jreDownloadUrlPrefix>https://github.com/adoptium/temurin17-binaries/releases/download/</jreDownloadUrlPrefix>
+        <jreDownloadFileName>OpenJDK17U-jre_x64_windows_hotspot_17.0.5_8.zip</jreDownloadFileName>
+        <jreDownloadUrlSuffix>jdk-17.0.5%2B8/${jreDownloadFileName}</jreDownloadUrlSuffix>
         <jreDownloadUrl>${jreDownloadUrlPrefix}${jreDownloadUrlSuffix}</jreDownloadUrl>
-        <jreDownloadSha256Checksum>85ca20dae21fb5949045df02cc47e71495a1903f77a97a93085596e5e96d0714</jreDownloadSha256Checksum>
+        <jreDownloadSha256Checksum>d25a2d44c1bd9c57d49c5e98de274cd40970ab057fe304b52eb459de4ee5d8a5
+        </jreDownloadSha256Checksum>
     </properties>
 
     <repositories>
@@ -37,6 +38,11 @@
             <id>github</id>
             <name>GitHub Packages</name>
             <url>https://maven.pkg.github.com/Draegerwerk/t2iapi</url>
+        </repository>
+        <repository>
+            <id>sonatype</id>
+            <name>OSS Sonatype Snapshots</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
     </repositories>
 
@@ -130,7 +136,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>3.4.0</version>
+            <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
 
@@ -183,6 +189,35 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>${jakartaXmlBindApiVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${comSunXmlBindVersion}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>${comSunXmlBindVersion}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+        <!-- use older version for sdc-ri -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
@@ -217,8 +252,13 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>3.3.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M7</version>
                 <configuration>
                     <reportsDirectories>
                         <directory>${project.build.directory}/surefire-reports/</directory>
@@ -233,7 +273,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M7</version>
                 <configuration>
                     <outputName>unitAndIntegrationTestReport</outputName>
                     <title>Unit- and Integration Test Report</title>
@@ -258,9 +298,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.1</version>
                 <configuration>
-                    <release>11</release>
+                    <release>17</release>
                 </configuration>
             </plugin>
 
@@ -268,7 +308,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
+                <version>3.0.0-M7</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
@@ -308,13 +348,13 @@
             <plugin>
                 <groupId>com.github.spotbugs</groupId>
                 <artifactId>spotbugs-maven-plugin</artifactId>
-                <version>3.1.12.2</version>
+                <version>4.7.2.1</version>
                 <dependencies>
                     <!-- overwrite dependency on spotbugs if you want to specify the version of spotbugs -->
                     <dependency>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs</artifactId>
-                        <version>4.0.0</version>
+                        <version>${spotbugsVersion}</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -326,6 +366,7 @@
                 </executions>
                 <configuration>
                     <includeTests>true</includeTests>
+                    <excludeFilterFile>../spotbugs/filter.xml</excludeFilterFile>
                 </configuration>
             </plugin>
 
@@ -377,7 +418,7 @@
                     <plugin>
                         <groupId>com.akathist.maven.plugins.launch4j</groupId>
                         <artifactId>launch4j-maven-plugin</artifactId>
-                        <version>1.7.25</version>
+                        <version>2.1.3</version>
                         <executions>
                             <execution>
                                 <id>l4j-clui</id>
@@ -388,7 +429,8 @@
                                 <configuration>
                                     <headerType>console</headerType>
                                     <jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
-                                    <outfile>${project.build.directory}/${project.artifactId}-${project.version}.exe</outfile>
+                                    <outfile>${project.build.directory}/${project.artifactId}-${project.version}.exe
+                                    </outfile>
                                     <downloadUrl>https://adoptopenjdk.net</downloadUrl>
                                     <classPath>
                                         <mainClass>com.draeger.medical.sdccc.TestSuite</mainClass>
@@ -396,7 +438,7 @@
                                         <preCp>lib/**</preCp>
                                     </classPath>
                                     <jre>
-                                        <minVersion>11</minVersion>
+                                        <minVersion>17</minVersion>
                                         <path>${jreFullPath}</path>
                                     </jre>
                                     <versionInfo>
