--- a/configuration/test_configuration.toml
+++ b/configuration/test_configuration.toml
@@ -61,6 +61,7 @@ C-62=true
 5-4-7_8=true
 5-4-7_10=true
 5-4-7_12_0=true
+5-4-7_14=true
 
 [DPWS]         # OASIS DPWS 1.1 - http://docs.oasis-open.org/ws-dd/dpws/wsdd-dpws-1.1-spec.html
 R0001=true
