Revert "remove remaining checkstyle occurrence and apply spotless formatting" partially
This reverts commit 31ac2f1a24bcd4d95ebc32960804a895aa5c1f9b partially.

--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -18,6 +18,7 @@
         <sdcriVersion>2.1.0-20221018.121941-19</sdcriVersion>
         <log4jVersion>2.17.1</log4jVersion>
         <spotbugsVersion>4.7.3</spotbugsVersion>
+        <checkstyleConfigDir>../checkstyle</checkstyleConfigDir>
         <bouncyCastleVersion>1.67</bouncyCastleVersion>
 
         <!-- name of the directory inside the archive -->
