--- a/configuration/test_configuration.toml
+++ b/configuration/test_configuration.toml
@@ -74,7 +74,7 @@ R0040=true
 
 [GLUE]         # ISO/IEEE 11073-20701
 13=true
-8-1-3=true               # NOTE: only applicable to PoC Medical Devices that are extendable by removable subsystems
+8-1-3=true
 R0010_0=true
 R0011=true
 R0012_0_0=true
