--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -15,7 +15,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junitVersion>5.6.0</junitVersion>
         <junitPlatformVersion>1.6.0</junitPlatformVersion>
-        <sdcriVersion>2.1.0-20221018.121941-19</sdcriVersion>
+        <!-- TODO: this must be a Release Version when building the Release -->
+        <sdcriVersion>3.0.0-SNAPSHOT</sdcriVersion>
         <log4jVersion>2.17.1</log4jVersion>
         <spotbugsVersion>4.7.3</spotbugsVersion>
         <checkstyleConfigDir>../checkstyle</checkstyleConfigDir>
