Added test and unit tests for glue r0078_0

--- a/configuration/test_configuration.toml
+++ b/configuration/test_configuration.toml
@@ -1,84 +1,85 @@
 [MDPWS]         # ISO/IEEE 11073-20702
-R0006=true
-R0008=true
-R0010=true
-R0011=true
-R0012=true
-R0013=true
-R0014=true
-R0015=true
+R0006=false
+R0008=false
+R0010=false
+R0011=false
+R0012=false
+R0013=false
+R0014=false
+R0015=false
 
 [BICEPS]         # ISO/IEEE 11073-10207
-R0007_0=true
-R0021=true
-R0023=true
-R0025_0=true
-R0029_0=true
-R0033=true
-R0034_0=true
-R0038_0=true
-R0062=true
-R0064=true
-R0066=true
-R0068=true
-R0069=true
-R0097=true
-R0100=true
-R0101=true
-R0104=true
-R0105_0=true
-R0116=true
-R0119=true
-R0124=true
-R0125=true
-R0133=true
-R5003=true
-B-6_0=true
-B-61=true
-B-128=true
-R5006=true
-B-284_0=true
-B-402_0=true
-C-11=true
-C-12=true
-C-13=true
-C-14=true
-C-15=true
-C-55_0=true
-R5024=true
-R5025_0=true
-R5039=true
-R5040=true
-R5041=true
-R5042=true
-R5051=true
-R5052=true
-C-62=true
-5-4-7_0_0=true
-5-4-7_2=true
-5-4-7_4=true
-5-4-7_6_0=true
-5-4-7_8=true
-5-4-7_10=true
-5-4-7_12_0=true
-5-4-7_14=true
+R0007_0=false
+R0021=false
+R0023=false
+R0025_0=false
+R0029_0=false
+R0033=false
+R0034_0=false
+R0038_0=false
+R0062=false
+R0064=false
+R0066=false
+R0068=false
+R0069=false
+R0097=false
+R0100=false
+R0101=false
+R0104=false
+R0105_0=false
+R0116=false
+R0119=false
+R0124=false
+R0125=false
+R0133=false
+R5003=false
+B-6_0=false
+B-61=false
+B-128=false
+R5006=false
+B-284_0=false
+B-402_0=false
+C-11=false
+C-12=false
+C-13=false
+C-14=false
+C-15=false
+C-55_0=false
+R5024=false
+R5025_0=false
+R5039=false
+R5040=false
+R5041=false
+R5042=false
+R5051=false
+R5052=false
+C-62=false
+5-4-7_0_0=false
+5-4-7_2=false
+5-4-7_4=false
+5-4-7_6_0=false
+5-4-7_8=false
+5-4-7_10=false
+5-4-7_12_0=false
+5-4-7_14=false
 
 [DPWS]         # OASIS DPWS 1.1 - http://docs.oasis-open.org/ws-dd/dpws/wsdd-dpws-1.1-spec.html
-R0001=true
-R0013=true
-R0019=true
-R0031=true
-R0034=true
-R0040=true
+R0001=false
+R0013=false
+R0019=false
+R0031=false
+R0034=false
+R0040=false
 
 [GLUE]         # ISO/IEEE 11073-20701
-13=true
-R0010_0=true
-R0011=true
-R0012_0_0=true
-R0013=true
-R0034_0=true
-R0036=true
-R0042_0=true
-R0072=true
-R0080=true
+13=false
+R0010_0=false
+R0011=false
+R0012_0_0=false
+R0013=false
+R0034_0=false
+R0036=false
+R0042_0=false
+R0072=false
+R0078_0=true
+R0080=false
