--- a/configuration/test_configuration.toml
+++ b/configuration/test_configuration.toml
@@ -1,5 +1,5 @@
 [MDPWS]         # ISO/IEEE 11073-20702
-R0006=true
+R0006=false
 R0008=true
 R0010=true
 R0011=true
@@ -14,7 +14,7 @@ R0021=true
 R0023=true
 R0025_0=true
 R0029_0=true
-R0033=true
+R0033=false
 R0034_0=true
 R0038_0=true
 R0062=true
@@ -23,20 +23,20 @@ R0066=true
 R0068=true
 R0069=true
 R0097=true
-R0100=true
+R0100=false
 R0101=true
 R0104=true
 R0105_0=true
 R0116=true
-R0119=true
+R0119=false
 R0124=true
 R0125=true
 R0133=true
 R5003=true
-B-6_0=true
-B-61=true
-B-128=true
 R5006=true
+B-6_0=true
+B-61=false
+B-128=false
 B-284_0=true
 B-402_0=true
 C-11=true
@@ -45,15 +45,15 @@ C-13=true
 C-14=true
 C-15=true
 C-55_0=true
+C-62=true
 R5024=true
 R5025_0=true
 R5039=true
 R5040=true
 R5041=true
 R5042=true
-R5051=true
+R5051=false
 R5052=true
-C-62=true
 5-4-7_0_0=true
 5-4-7_2=true
 5-4-7_4=true
@@ -65,12 +65,12 @@ C-62=true
 5-4-7_16=true
 
 [DPWS]         # OASIS DPWS 1.1 - http://docs.oasis-open.org/ws-dd/dpws/wsdd-dpws-1.1-spec.html
-R0001=true
-R0013=true
-R0019=true
-R0031=true
-R0034=true
-R0040=true
+R0001=false
+R0013=false
+R0019=false
+R0031=false
+R0034=false
+R0040=false
 
 [GLUE]         # ISO/IEEE 11073-20701
 13=true
@@ -78,10 +78,10 @@ R0040=true
 R0010_0=true
 R0011=true
 R0012_0_0=true
-R0013=true
+R0013=false
 R0034_0=true
 R0036=true
 R0042_0=true
-R0072=true
+R0072=false
 R0078_0=true
 R0080=true
