--- a/configuration/test_configuration.toml
+++ b/configuration/test_configuration.toml
@@ -70,6 +70,7 @@ R5052=true
 5-4-7_12_0=true
 5-4-7_13=true
 5-4-7_14=true
+5-4-7_15=true
 5-4-7_16=true
 
 [DPWS]         # OASIS DPWS 1.1 - http://docs.oasis-open.org/ws-dd/dpws/wsdd-dpws-1.1-spec.html
