Implemented Test Case for Biceps:C-7. Requires a change to T2IAPI that must be released first.

--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -172,7 +172,8 @@
         <dependency>
             <groupId>com.draeger.medical</groupId>
             <artifactId>t2iapi</artifactId>
-            <version>1.4.0</version>
+            <!-- TODO: use a release version once the changes are released! -->
+            <version>1.4.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
