--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -172,8 +172,7 @@
         <dependency>
             <groupId>com.draeger.medical</groupId>
             <artifactId>t2iapi</artifactId>
-            <!-- TODO: use a release version once the changes are released! -->
-            <version>1.4.1-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
