Implemented test case for biceps:C-7 (#72)
Implemented test case for biceps:C-7 using a new
DescriptionModificationMdsDescriptorPrecondition and UnitTests for both.

# Checklist

The following aspects have been respected by the author of this pull
request, confirmed by both pull request assignee **and** reviewer:

* Adherence to coding conventions
  * [x] Pull Request Assignee
  * [x] Reviewer
* Adherence to javadoc conventions
  * [x] Pull Request Assignee
  * [x] Reviewer
* Changelog update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* README update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* config update (necessity checked and entry added or not added
respectively)
  * [x] Pull Request Assignee
  * [x] Reviewer
* SDCcc executable ran against a test device (if necessary)
  * [x] Pull Request Assignee
  * [x] Reviewer

--- a/sdccc/pom.xml
+++ b/sdccc/pom.xml
@@ -172,7 +172,9 @@
         <dependency>
             <groupId>com.draeger.medical</groupId>
             <artifactId>t2iapi</artifactId>
-            <version>1.4.0</version>
+            <!-- TODO: 2.0.0.106 is a development version.
+                       Once t2iapi:2.0.0 is released, use the release version instead -->
+            <version>2.0.0.106</version>
         </dependency>
 
         <dependency>
