updated test_configuration.toml for release 7.0.x

--- a/configuration/test_configuration.toml
+++ b/configuration/test_configuration.toml
@@ -14,10 +14,10 @@ R0021=true
 R0023=true
 R0025_0=true
 R0029_0=true
-R0033=false
+R0033=true
 R0034_0=true
 R0038_0=true
-R0055_0=true
+R0055_0=false
 R0062=true
 R0064=true
 R0066=true
@@ -56,7 +56,7 @@ R5040=true
 R5041=true
 R5042=true
 R5046_0=true
-R5051=false
+R5051=true
 R5052=true
 R5053=true
 5-4-7_0_0=true
