Summarize message encoding errors by default.

--- a/configuration/config.toml
+++ b/configuration/config.toml
@@ -2,6 +2,7 @@
 CIMode=false
 GraphicalPopups=true
 TestExecutionLogging=true
+SummarizeMessageEncodingErrors=true
 
 [SDCcc.TLS]
 FileDirectory="./configuration"
@@ -11,11 +12,11 @@ ParticipantPrivatePassword="dummypass"
 EnabledProtocols = ["TLSv1.2", "TLSv1.3"]
 
 [SDCcc.Network]
-InterfaceAddress="127.0.0.1"
+InterfaceAddress="192.168.2.106"
 
 [SDCcc.Consumer]
 Enable=true
-DeviceEpr="urn:uuid:857bf583-8a51-475f-a77f-d0ca7de69b11"
+DeviceEpr="urn:uuid:bbad3043-f225-4020-becd-ddb5632bc1e5"
 
 [SDCcc.Provider]
 Enable=false
