Added the Configuration Option EnableEncodingCheck to Enable/Disable the Encoding Check altogether.

--- a/configuration/config.toml
+++ b/configuration/config.toml
@@ -2,6 +2,7 @@
 CIMode=false
 GraphicalPopups=true
 TestExecutionLogging=true
+EnableEncodingCheck=false
 SummarizeMessageEncodingErrors=true
 
 [SDCcc.TLS]
