fix the tls version parameter and add a cipher parameter

--- a/configuration/config.toml
+++ b/configuration/config.toml
@@ -11,6 +11,18 @@ KeyStorePassword="whatever"
 TrustStorePassword="whatever"
 ParticipantPrivatePassword="dummypass"
 EnabledProtocols = ["TLSv1.2", "TLSv1.3"]
+EnabledCiphers = [
+    # TLS 1.2
+    "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256",
+    "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
+    "TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384",
+    "TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384",
+    "TLS_DHE_RSA_WITH_AES_128_GCM_SHA256",
+    "TLS_DHE_RSA_WITH_AES_256_GCM_SHA384",
+    # TLS 1.3
+    "TLS_AES_128_GCM_SHA256",
+    "TLS_AES_256_GCM_SHA384",
+]
 
 [SDCcc.Network]
 InterfaceAddress="127.0.0.1"
