--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,10 @@
         <changelist>-SNAPSHOT</changelist>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <execPluginVersion>3.1.0</execPluginVersion>
-        <jakartaXmlBindApiVersion>4.0.0</jakartaXmlBindApiVersion>
-        <comSunXmlBindVersion>4.0.1</comSunXmlBindVersion>
+        <jakartaXmlBindApiVersion>4.0.1</jakartaXmlBindApiVersion>
+        <jaxbRuntimeVersion>4.0.4</jaxbRuntimeVersion>
+        <jaxbCoreVersion>4.0.4</jaxbCoreVersion>
+        <jaxbBuildHelperMavenPluginVersion>3.5.0</jaxbBuildHelperMavenPluginVersion>
     </properties>
 
     <build>
